project(ImGuizmo)

add_library(ImGuizmo STATIC
        ImGuizmo.h
        ImSequencer.cpp
        ImSequencer.h
        ImZoomSlider.h
        GraphEditor.cpp
        GraphEditor.h
        ImCurveEdit.cpp
        ImCurveEdit.h
        ImGradient.cpp
        ImGradient.h
        ImGuizmo.cpp
)











